generate listener rule priority randomly using shuf

--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -171,6 +171,7 @@ Resources:
                   - "elasticloadbalancing:CreateRule"
                   - "elasticloadbalancing:ModifyRule"
                   - "elasticloadbalancing:DeleteRule"
+                  - "elasticloadbalancing:SetRulePriorities"
                   - "autoscaling:CreateAutoScalingGroup"
                   - "autoscaling:DeleteAutoScalingGroup"
                   - "autoscaling:CreateLaunchConfiguration"
