--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -20,6 +20,12 @@ Parameters:
   ConfigLocation:
     Type: String
     Default: wixit-core-configs
+  StageLevel:
+    Type: String
+    Default: dev
+    AllowedValues:
+    - dev
+    - prod
 
 Resources:
   CodePipelineRole:
