allow codebuild role to get secret

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -50,13 +50,13 @@ phases:
 
       echo WTFFFFFFFFFFFFFFFFFFFFFFFFFFFF
       secret_string_escaped_json=$(aws secretsmanager get-secret-value --region eu-west-1 --secret-id WixitProd | jq '.SecretString')
-      echo $secret_string_escaped_json
-      secret_string_json=$(printf "${secret_string_escaped_json:1:${#secret_string_escaped_json}-2}\n")
-      echo secret_string_json
-      password_str=$(echo $secret_string_json | jq .PostgreDbPassword)
-      echo password_str
+      temp="${secret_string_escaped_json%\"}"
+      secret_string_json="${temp#\"}"
+      secret_string_json_unescaped=$(printf $secret_string_json)
+      password_str=$(echo $secret_string_json_unescaped | jq .PostgreDbPassword)
       DATABASE_MASTER_PASSWORD=${password_str:1:${#password_str}-2}
-      echo DATABASE_MASTER_PASSWORD
+      echo $DATABASE_MASTER_PASSWORD
+
       sed -i -e "s/DATABASE_MASTER_PASSWORD_PLACEHOLDER/$DATABASE_MASTER_PASSWORD/" cloudformation/stackset/microservice-params-prod.json
 
       sed -i -e "s/ENVIRONMENT_PLACEHOLDER/PROD/" cloudformation/stackset/microservice-params-prod.json
