--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -55,9 +55,7 @@ phases:
       echo $temp
       secret_string_json="${temp#\"}"
       echo $secret_string_json
-      secret_string_json_unescaped=$(printf $secret_string_json)
-      echo $secret_string_json_unescaped
-      password_str=$(echo $secret_string_json_unescaped | jq .PostgreDbPassword)
+      password_str=$(echo $secret_string_json | jq .PostgreDbPassword)
       echo $password_str
       DATABASE_MASTER_PASSWORD=${password_str:1:${#password_str}-2}
 
