--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -56,6 +56,7 @@ phases:
       secret_string_json="${temp#\"}"
       echo $secret_string_json
       echo $secret_string_json | sed 's/\\n/\n/g'
+      printf '%b\n' "$secret_string_json"
       python --version
       password_str=$(echo $secret_string_json | sed 's/\\n/\n/g' | jq .PostgreDbPassword)
       echo $password_str
