WXAUTH-1 github integration to youtrack test

--- a/cloudformation/stackset/microservice.yaml
+++ b/cloudformation/stackset/microservice.yaml
@@ -12,8 +12,7 @@ Parameters:
   TemplateBucket:
     Type: String
     Default: ec2-spring-boot-cloudformation-stack
-    Description: >
-      The S3 bucket from which to fetch the templates used by this stack.
+    Description: The S3 bucket from which to fetch the templates used by this stack.
 
   ContextPath:
     Type: String
