--- a/cloudformation/stackset/microservice-templates/ecs-cluster.yaml
+++ b/cloudformation/stackset/microservice-templates/ecs-cluster.yaml
@@ -5,7 +5,7 @@ AWSTemplateFormatVersion: 2010-09-09
 Parameters:
   InstanceType:
     Type: String
-    Default: t2.micro
+    Default: t2.small
 
   ClusterSize:
     Type: Number
