permissons to update cluster changed

--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -177,9 +177,10 @@ Resources:
                   - "elasticloadbalancing:SetRulePriorities"
                   - "autoscaling:CreateAutoScalingGroup"
                   - "autoscaling:DeleteAutoScalingGroup"
+                  - "autoscaling:UpdateAutoScalingGroup"
+                  - "autoscaling:TerminateInstanceInAutoScalingGroup"
                   - "autoscaling:CreateLaunchConfiguration"
                   - "autoscaling:DeleteLaunchConfiguration"
-                  - "autoscaling:UpdateAutoScalingGroup"
                   - "rds:CreateDBSubnetGroup"
                   - "rds:DeleteDBSubnetGroup"
                   - "iam:CreateRole"
