permissons to update cluster changed

--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -179,6 +179,7 @@ Resources:
                   - "autoscaling:DeleteAutoScalingGroup"
                   - "autoscaling:UpdateAutoScalingGroup"
                   - "autoscaling:TerminateInstanceInAutoScalingGroup"
+                  - "autoscaling:SetDesiredCapacity"
                   - "autoscaling:CreateLaunchConfiguration"
                   - "autoscaling:DeleteLaunchConfiguration"
                   - "rds:CreateDBSubnetGroup"
