--- a/cloudformation/stackset/microservice-templates/service.yaml
+++ b/cloudformation/stackset/microservice-templates/service.yaml
@@ -106,6 +106,8 @@ Resources:
               Value: !Ref RedisPort
             - Name: REDIS_PSWD
               Value: !Ref RedisPassword
+            - Name: REDIS_SSL_ENABLED
+              Value: true
             - Name: CONTEXT_PATH
               Value: !Ref ContextPath
           Memory: 512
